Bug 273123 - Words crashes while opening the doc file
Summary: Words crashes while opening the doc file
Status: VERIFIED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: doc (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-12 14:40 UTC by swathi
Modified: 2011-05-13 09:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2011-05-12 14:40:53 UTC
Version: git checkout bf95f1d4928ff3d151e1cb4fba7d8fc68ab86d9f
        (Using KDE 4.5.5)                
     OS: Kubuntu 10.10
Test data is in MS Word 2003 format 
Open the same document in Calligra Words.

Expected outcome:
Document should be opened.

Actual outcome:
Crash is observed while opening the document.

Frequency:
Always.
Comment 1 swathi 2011-05-12 14:41:57 UTC
Here is the backtrace.
Application: Words (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#7  0x026a2bd4 in KoGenStyle::addPropertyPt (this=0x29, propName=..., propValue=72, type=KoGenStyle::DefaultType) at /home/swathi/n/calligra/libs/odf/KoGenStyle.cpp:309
#8  0x05f08cc1 in Document::slotSectionEnd (this=0x99853e0, sep=...) at /home/swathi/n/calligra/filters/words/msword-odf/document.cpp:591
#9  0x05f11895 in Document::qt_metacall (this=0x99853e0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbf88cd48) at /home/swathi/n/build/filters/words/msword-odf/document.moc:97
#10 0x0057a8ca in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#11 0x0058d6ad in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#12 0x05f18d93 in KWordTextHandler::sectionEnd (this=0x9a9ca00, _t1=...) at /home/swathi/n/build/filters/words/msword-odf/texthandler.moc:120
#13 0x05f1f866 in KWordTextHandler::sectionEnd (this=0x9a9ca00) at /home/swathi/n/calligra/filters/words/msword-odf/texthandler.cpp:257
#14 0x04e0dc2d in wvWare::Parser9x::processPiece<unsigned char> (this=0x9a58020, string=0x9aede90 "\001\r\rGovernance guide for Office SharePoint Server\rMicrosoft Corporation\rPublished: July 2008\rAuthor: \023HYPERLINK \"mailto:o12ITdx@microsoft.com\"\024Office SharePoint Server IT User Assistance\025 (o12ITdx@micr"..., fc=2048, limit=7534, position=...) at /home/swathi/n/calligra/filters/words/msword-odf/wv2/src/parser9x.cpp:584
#15 0x04e0bbb4 in wvWare::Parser9x::parseHelper (this=0x9a58020, startPos=...) at /home/swathi/n/calligra/filters/words/msword-odf/wv2/src/parser9x.cpp:542
#16 0x04e0c27b in wvWare::Parser9x::parseBody (this=0x9a58020) at /home/swathi/n/calligra/filters/words/msword-odf/wv2/src/parser9x.cpp:491
#17 0x04e0c429 in wvWare::Parser9x::parse (this=0x9a58020) at /home/swathi/n/calligra/filters/words/msword-odf/wv2/src/parser9x.cpp:188
#18 0x05f055c3 in Document::parse (this=0x99853e0) at /home/swathi/n/calligra/filters/words/msword-odf/document.cpp:411
#19 0x05f02af5 in MSWordOdfImport::convert (this=0x998b778, from=..., to=...) at /home/swathi/n/calligra/filters/words/msword-odf/mswordodfimport.cpp:209
#20 0x025fe478 in KOfficeFilter::ChainLink::invokeFilter (this=0x9986200, parentChainLink=0x0) at /home/swathi/n/calligra/libs/main/KoFilterChainLink.cpp:90
#21 0x025f3ded in KoFilterChain::invokeChain (this=0x9986840) at /home/swathi/n/calligra/libs/main/KoFilterChain.cpp:94
#22 0x025f0bed in KoFilterManager::importDocument (this=0x9884528, url=..., documentMimeType=..., status=@0xbf88d684) at /home/swathi/n/calligra/libs/main/KoFilterManager.cpp:170
#23 0x02599449 in KoDocument::openFile (this=0x97a7220) at /home/swathi/n/calligra/libs/main/KoDocument.cpp:1503
#24 0x01dc5549 in KParts::ReadOnlyPart::openUrl(KUrl const&) () from /usr/lib/libkparts.so.4
#25 0x02597b71 in KoDocument::openUrl (this=0x97a7220, _url=...) at /home/swathi/n/calligra/libs/main/KoDocument.cpp:1264
#26 0x025bf83f in KoMainWindow::openDocumentInternal (this=0x97cda98, url=..., newdoc=0x97a7220) at /home/swathi/n/calligra/libs/main/KoMainWindow.cpp:677
#27 0x025c05f6 in KoMainWindow::openDocument (this=0x97cda98, newdoc=0x97a7220, url=...) at /home/swathi/n/calligra/libs/main/KoMainWindow.cpp:660
#28 0x0258a88d in KoApplication::start (this=0xbf88dc9c) at /home/swathi/n/calligra/libs/main/KoApplication.cpp:252
#29 0x047d498f in kdemain (argc=2, argv=0x9618e68) at /home/swathi/n/calligra/words/part/main.cpp:41
#30 0x0804e4d1 in _start ()
Comment 2 Matus Uzak 2011-05-12 16:43:42 UTC
Git commit 9232602d60fc7aee841193501cd402a6c3a24e52 by Matus Uzak.
Committed on 12/05/2011 at 16:37.
Pushed by uzak into branch 'master'.

DOC: Handle EvenPage/OddPage as NewPage section breaks.

* More time is needed to add full support for EvenPage/OddPage section breaks.
  Let's use the safe approach we have for NewPage section breaks at the moment.

BUG:273123

M  +13   -13   filters/words/msword-odf/document.cpp     
A  +43   -0    filters/words/msword-odf/msdoc.h         [License: BSD]
M  +9    -8    filters/words/msword-odf/texthandler.cpp     

http://commits.kde.org/calligra/9232602d60fc7aee841193501cd402a6c3a24e52
Comment 3 swathi 2011-05-13 09:33:00 UTC
Verified in rev  15f2a481ef742bc6f0ded66ca854d29ae6f712ac.