DOC: Handle EvenPage/OddPage as NewPage section breaks.

* More time is needed to add full support for EvenPage/OddPage section breaks.
  Let's use the safe approach we have for NewPage section breaks at the moment.

BUG:273123